Changed EMail template for HR

--- a/src/hr/mailer/templates/attendanceEntryEdited.html
+++ b/src/hr/mailer/templates/attendanceEntryEdited.html
@@ -10,7 +10,7 @@
     <p>
       Hello {{ name }},<br />
       This is to inform you that your attendance log for <strong>{{ attendanceDate }}</strong>
-      was manually edited by an administrator on <strong>{{ editTimestamp }}</strong>.
+      was manually edited by a HR on <strong>{{ editTimestamp }}</strong>.
     </p>
 
     <h3>🕒 Previous Entry</h3>
