[HR, Admin][Feature][Updated Email templates]

--- a/src/admin/mailer/templates/monthlyAttendanceReports.html
+++ b/src/admin/mailer/templates/monthlyAttendanceReports.html
@@ -32,7 +32,7 @@
 			<p>Hello Admin,</p>
 
 			<p>
-				Please find the attached PDF and Excel reports for employee
+				Please find the attached PDF reports for employee
 				attendance in <strong>{{monthYear}}</strong>.
 			</p>
 
