--- a/src/hr/mailer/templates/monthlyAttendanceReports.html
+++ b/src/hr/mailer/templates/monthlyAttendanceReports.html
@@ -29,10 +29,10 @@
 		<div class="container">
 			<h2>Monthly Attendance Reports – {{monthYear}}</h2>
 
-			<p>Hello Admin,</p>
+			<p>Hello HR,</p>
 
 			<p>
-				Please find the attached PDF and Excel reports for employee
+				Please find the attached PDF reports for employee
 				attendance in <strong>{{monthYear}}</strong>.
 			</p>
 
